--- a/JsGuess/jsguess.html
+++ b/JsGuess/jsguess.html
@@ -5,7 +5,7 @@
 		<script src="jsgame.js"></script>
 	</head>
 	<body>
-		<p onclick="Start()">Start</p>
+		<p id="start" onclick="Start()">Start</p>
 	</body>
 </html>
 
