--- a/JsGuess/jsguess.html
+++ b/JsGuess/jsguess.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Javascript Guessing Game</title>
-		<script src="jsgame.js"></script>
+		<script src="jscalc.js"></script>
 	</head>
 	<body>
 		<p id="start" onclick="Start()">Start</p>
