--- a/AppLight/appLight.html
+++ b/AppLight/appLight.html
@@ -1,14 +1,18 @@
+
 <!DOCTYPE html>
 	<html>	
 		<head>
-			<title>app Light</title>
-			<link rel="stylesheet" href="appLight.css"/>
+			<title>applight</title>
+			<link rel="stylesheet" href="applight.css"/>
 		</head>
 		
-		<body class="case"> 
+		<body class = "body">
+			<div class="spacer1" id = "Spacer1"> </div>
 			<div class="switch">
-				<p id="toggle" onclick="lightSwitch()">ON</p>
+				<div class= "part2" id = "SwitchPart">
+					<div class="text" id = "SwitchText">Off</div>
+				</div>
 			</div>
-		<script src="appLight.js"></script>
+			<script src="applight.js"></script>
 		</body>
 	</html>
