--- a/AppTask3C/appTask3.html
+++ b/AppTask3C/appTask3.html
@@ -10,6 +10,7 @@
 		<label class = "inputLabel">Add Task: </label>
 			<input class = "inputTextfield" id="taskInput" type = "text"/>
 			<button class = "inputButton" id="taskAdd">Add</button>
+			<button class = "clearButton" id="clearAll">Clear</button>
 		</fieldset>
 		<ul id="list"></ul>
   	</div>
