--- a/Checkers/Checkers.html
+++ b/Checkers/Checkers.html
@@ -6,7 +6,9 @@
 		</head>
 		
 		<body class = "body">
+			<div id="board" class = "board">
 			
+			</div>
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 			<script src="Checkers.js"></script>
 		</body>
