--- a/Checkers/Checkers.html
+++ b/Checkers/Checkers.html
@@ -14,7 +14,7 @@
                       <h3>Player 2 (red)</h3>
                     </div>
                     </div>
-                    <div class="turn"></div>
+                    <div class="turn" id="turnIndicator"></div>
                     <button id="cleargame">New Game</button>
                     <button id="savegame">Save Game</button>
                     <button id="loadgame">Load Game</button>
